# OneWeekVulkan

./: .gitignore  CMakeLists.txt  README.md  install_3rd_parties.sh  install_vulkan_packages_linux.sh
src/: App.cpp  App.hpp  Camera.cpp  Camera.hpp  Device.cpp  Device.hpp  GameObject.hpp  KeyboardMovementController.cpp  KeyboardMovementController.hpp  Model.cpp  Model.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  SimpleRenderSystem.cpp  SimpleRenderSystem.hpp  SwapChain.cpp  SwapChain.hpp  Window.cpp  Window.hpp  main.cpp
src/shaders/: compile.sh  simple_shader.frag  simple_shader.vert
